--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shouding/ep-validate",
+    "name": "xiangshouding/ep-validate",
     "description": "Another validate tool",
     "type": "library",
     "license": "MIT",
